# seedQR-generator

./: .gitignore  README.md  pyproject.toml  requirements.txt
seedqr/: __main__.py  helpers.py  otp.py
seedqr/tests/: test_helpers.py
tests/: datatest.py
